Fix window focus event regressions (bug 190767), patch by Ruslan Ismailov (croo@nm.ru), r=jkeiser@netscape.com, sr=bryner@netscape.com